force-app/main/default/objects/Margin_Assmption1__c/Margin_Assmption1__c.object-meta.xml
<CustomObject>
    <description>Financial assumption for margin calculation</description>
    <label>Margin Assumption 1</label>
    <nameField>
        <label>Margin Assmption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Margin Assumptions 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>