force-app/main/default/objects/Margin_Assmption1__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Labor Rate</fullName>
            </value>
            <value>
                <fullName>Other COS Allocation</fullName>
            </value>
            <value>
                <fullName>Outside Processes</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Options Margin</fullName>
            </value>
            <value>
                <fullName>Labor Hours</fullName>
            </value>
            <value>
                <fullName>Delivery Rate/Mile</fullName>
            </value>
            <value>
                <fullName>Delivery Incidentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>